2007-11-27  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Emit warning message
	(still commented out) if files are found in the old location.

2007-11-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install, elisp-site-regen):
	Replace basename by bash parameter expansion.
	Install packages' site-init files in site-gentoo.d subdirectory.

2007-11-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (SITEETC): New variable.
	(elisp-site-file-install): Handle @SITEETC@ in site-init file.

2007-11-01  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (EMACSFLAGS): New variable, replaces
	EMACS_BATCH_CLEAN. Rationale: Keep program path separate from
	flags, to allow its redefinition in ebuilds.
	(elisp-compile, elisp-comp): Group compile functions together.

2007-10-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Use square brackets for test.
	Remove dysfunctional code.

2007-10-04  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass (EMACS): use an en dash instead of a hypen
	in comment

2007-10-03  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (SITELISP, SITEFILE): Document variables.

2007-09-26  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: remove colon from previous change

2007-09-25  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: remove a spurious space
	add a colon where it might be intended

2007-09-22  Hans de Graaff  <graaff@gentoo.org>

	* xemacs-elisp-common.eclass: Implement xemacs-elisp-comp that can
	be used to compile interdependent elisp files.

	* xemacs-elisp-common.eclass, xemacs-elisp.eclass: Use die
	consistently in the functions in common, as commented on by Donny
	Berkholz on gentoo-dev. Fix documentation.

2007-09-21  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Provide site-gentoo.
	Recommend require instead of load in einfo message.